feat: add mentor notification
